Use immutable collections wherever possible
* Removes double brace initializations wherever possible
* Makes getters defensive